syntax="proto3";

package proto_session;

import "google/protobuf/timestamp.proto";

message SessionID {
    string ID = 1;
}

message Session {
    string ID = 1;
    string Name = 2;
    uint64 UserID = 3;
    google.protobuf.Timestamp Expire = 4;
} 

service SessionService {
    rpc CreateSession(Session) returns(Session);
    rpc GetByID(SessionID) returns(Session);
    rpc DeleteSession(Session) returns(Session);
}